--- a/data/index.html
+++ b/data/index.html
@@ -54,8 +54,8 @@
         <style>
             .score_div{
                 padding: 0.5em; 
-                height: 100px; 
-                width: 300px;
+                height: 240px; 
+                width: 580px;
             }
 
             .ball_div{
@@ -71,7 +71,7 @@
 
             .game_text{
                 color: gold;
-                font-size: 100px;
+                font-size: 170px;
             }
             .ball_text{
                 color: gold;
@@ -79,19 +79,25 @@
                 display: inline-block;
                 vertical-align: top;
             }
+            .game_view{
+                height: 100vh;
+                width: 100vw;
+            }
         </style>
     </head>
     <body onload="startConnect()">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         <script src="sevenSeg.js"></script>
-        <div id="text_score" class="game_text">SCORE</div>
-        <div id="seven_score" class="score_div"></div>
-        <div id="ball" class="ball_text">BALLS<br>PLAYED</div>
-        <div id="seven_ball" class="ball_div"></div>
-        <div id="text_game_on" class="ball_text">GAME<br>EN</div>
-        <div id="seven_game" class="ball_div"></div>
-        <br>
-        <a href='/reset'>Reset</a>
+        <div id="view_port" class="game_view">
+            <div id="text_score" class="game_text">SCORE</div>
+            <div id="seven_score" class="score_div"></div>
+            <div id="ball" class="ball_text">BALLS<br>PLAYED</div>
+            <div id="seven_ball" class="ball_div"></div>
+            <div id="text_game_on" class="ball_text">GAME<br>EN</div>
+            <div id="seven_game" class="ball_div"></div>
+            <br>
+            <a href='/reset'>Reset</a>
+        </div>
     </body>
 </html>
